<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>nl.vpro.poms</groupId>
    <artifactId>poms-parent</artifactId>
    <version>8.11.0</version>
  </parent>

  <artifactId>poms-shared-backend-parent</artifactId>
  <version>8.11.0</version>
  <packaging>pom</packaging>

  <description>Shared backend implementation. The elasticsearch backend e.g. is used by both the frontend api as the publisher</description>

  <properties>
    <poms.shared.backend.version>${project.version}</poms.shared.backend.version>
    <!-- Tied to ES version! -->
    <lucene.version>${lucene.elasticsearch.version}</lucene.version>
    <skipIntegTests>true</skipIntegTests>
    <assembly.tarLongFileMode>posix</assembly.tarLongFileMode>
    <java.version>25</java.version>
  </properties>

  <scm>
    <url>https://github.com/npo-poms/poms-shared-backend</url>
    <connection>scm:git:${project.scm.url}</connection>
    <developerConnection>scm:git:${project.scm.url}</developerConnection>
    <tag>REL-8.11.0</tag>
  </scm>

  <modules>
    <module>api-backend-elasticsearch</module>
    <module>api-backend-media-search</module>
    <module>api-backend-thesaurus</module>
    <module>api-backend-semantic</module>

    <module>media-es-mappings</module>
    <module>pages-es-mappings</module>
    <module>query-es-mappings</module>
    <module>push-es-mappings</module>

    <!-- used to be in api itself, but used @vpro -->
    <module>api-rs</module>
    <module>api-rs-media-filter</module>
    <module>api-services</module>
    <module>api-rs-schedule</module>
    <module>api-rs-schedule-filter</module>
  </modules>

  <dependencies>
    <dependency>
      <groupId>org.junit.jupiter</groupId>
      <artifactId>junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-junit-jupiter</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>nl.vpro.shared</groupId>
      <artifactId>vpro-shared-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.mockito</groupId>
      <artifactId>mockito-core</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.projectlombok</groupId>
      <artifactId>lombok</artifactId>
    </dependency>
    <dependency>
      <groupId>nl.vpro.shared</groupId>
      <artifactId>vpro-shared-log4j2</artifactId>
      <scope>test</scope>
    </dependency>
  </dependencies>

  <repositories>
    <repository>
      <name>Central Portal Snapshots</name>
      <id>central-portal-snapshots</id>
      <url>https://central.sonatype.com/repository/maven-snapshots/</url>
      <releases>
        <enabled>false</enabled>
      </releases>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </repository>
  </repositories>

  <distributionManagement>
    <snapshotRepository>
      <id>github</id>
      <name>GitHub Packages</name>
      <url>https://maven.pkg.github.com/npo-poms/poms-shared-backend</url>
      <snapshots>
        <enabled>true</enabled>
      </snapshots>
    </snapshotRepository>
    <repository>
      <id>github</id>
      <url>https://maven.pkg.github.com/npo-poms/poms-shared-backend</url>
    </repository>
  </distributionManagement>


  <profiles>
    <profile>
      <id>validate</id>
      <build>
        <plugins>
          <plugin>
            <artifactId>maven-enforcer-plugin</artifactId>
            <configuration>
              <rules>
                <requireReleaseDeps>
                  <failWhenParentIsSnapshot>false</failWhenParentIsSnapshot>
                  <excludes>
                    <exclude>${project.groupId}:*</exclude>
                    <exclude>nl.vpro.api:*</exclude>
                    <exclude>nl.vpro.poms:*</exclude>
                  </excludes>
                </requireReleaseDeps>
              </rules>
            </configuration>
          </plugin>
        </plugins>
      </build>
    </profile>
  </profiles>


</project>
